feat(i18n): introduce abstract LocalizerResolver SPI and positional Text descriptors
Refactors the localization layer to be completely pluggable and framework-agnostic:

- LocalizerResolver:
  - Preserves @FunctionalInterface contract with SAM format(String, Map<String, Object>)
    for full backward compatibility with existing lambdas.
  - Adds formatPositional(String, Object...) with bidirectional bridging to named parameters.
  - Adds format(String, Object...) and format(String) convenience defaults.
  - Adds key existence check via has(String).
  - Provides zero-friction factory methods:
    * from(I18NBundle) for Arc/Mindustry Core.bundle integration
    * core() for dynamic Arc Core.bundle delegation
    * from(BiFunction) for named formatters (FluBundle)
    * from(Function) for simple map/properties lookup
    * positional(BiFunction) for custom positional engines (MessageFormat)
    * composite(resolvers...) and orElse(fallback) for fallback chaining
    * getDefault() and setDefault(resolver) for global default management.

- Text:
  - Adds Text.Positional sealed record and Text.pos / Text.positional factory methods
    for positional parameter substitution without Java overload ambiguities.
  - Adds Text.args(Object... keyValues) for zero-dependency, null-safe immutable
    argument map construction, eliminating reliance on external Bundle.args helpers.
  - Adds multi-argument Text.join(Text... parts) lazy concatenation helper.

- Tests:
  - Expands TextTest to cover Text.args validation, positional resolution, and multi-join.
  - Adds LocalizerResolverTest covering all factory adapters, composite resolution,
    and bidirectional bridging between named and positional formats.